# quiz

./: .editorconfig  compose.yml  mongodb-init.js
api/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
api/migrations/2024-07-15-171339_create_quiz_templates/: down.sql  up.sql
api/src/: auth.rs  context.rs  main.rs  schema.rs  session.rs
api/src/graphql/: mod.rs  question.rs  quiz_template.rs
api/src/models/: base_model.rs  error.rs  mod.rs  question.rs  quiz_template.rs  user.rs
api/static/: login.html
app/: Dockerfile  bun.lockb  codegen.ts  codegen.yml  nginx.conf.template  package.json  vite.config.ts
app/src/: App.tsx  main.tsx  queries.ts
app/src/components/: Page.tsx
app/src/components/question-dialogs/: AddQuestionDialog.tsx  EditQuestionDialog.tsx  QuestionDialogBase.tsx  index.ts
app/src/components/quiz-template-dialogs/: AddQuizTemplateDialog.tsx  DeleteQuizTemplateDialog.tsx  EditQuizTemplateDialog.tsx  index.ts
app/src/contexts/: user.tsx
app/src/gql/: gql.ts  graphql.ts
app/src/hooks/: useError.ts  useUser.ts
app/src/pages/: HomePage.tsx  QuizTemplatePage.tsx
