[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "uuid"] }
dotenvy = "0.15.7"
juniper = "0.16.1"
juniper_rocket = "0.9.0"
mongodb = "3.0.1"
rocket = "0.5.1"
rocket_cors = "0.6.0"
rocket_db_pools  = { version = "0.2.0", features = ["mongodb"]}
serde = { version = "1.0.204", features = ["derive"]}
uuid = "1.10.0"